# FastApiExample

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  alembic.ini  docker-compose.yml  pyproject.toml
src/: bootstrap.py  constants.py  logger.py  main.py  settings.py  utils.py
src/base_objects/: models.py
src/database/: constants.py  models.py
src/database/repositories/: __init__.py  base.py  catalog.py  crud.py  order.py  user.py  utils.py
src/errors/: __init__.py  auth.py  base.py  transport.py
src/integrations/: integration_client_utils.py
src/integrations/cdek/: client.py
src/integrations/ory_kratos/: client.py  models.py
src/integrations/redis/: client.py  utils.py
src/integrations/s3/: client.py  errors.py
src/integrations/sql_alchemy/: client.py  utils.py
src/integrations/tinkoff/: client.py  errors.py  models.py  utils.py
src/services/: __init__.py
src/services/catalog/: errors.py  models.py  service.py  utils.py
src/services/file_manager/: constants.py  models.py  service.py  utils.py
src/services/order/: constants.py  errors.py  models.py  service.py  utils.py
src/services/user/: constants.py  errors.py  models.py  service.py
src/transport/: constants.py  error_handlers.py
src/transport/depends/: __init__.py  auth.py  clients.py  db_session.py  repositories.py  services.py
src/transport/handlers/: __init__.py
src/transport/handlers/admin/catalog/: entrypoints.py  schemas.py  utils.py
src/transport/handlers/client/catalog/: entrypoints.py  schemas.py
src/transport/handlers/client/cdek_widget/: entrypoints.py
src/transport/handlers/client/order/: entrypoints.py  schemas.py
src/transport/handlers/client/user/: entrypoints.py
src/transport/handlers/internal/notifications/: entrypoints.py
src/transport/middlewares/: __init__.py  errors_handler_middleware.py  logging_middleware.py  prepare_session_middleware.py  trace_id_middleware.py
